# companieshouse.ch-analytics-repository-template

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  a_query.sql  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  discussion.yml  feature-request.yml
.github/workflows/: strip-notebooks.yml
init-config/: cookiecutter.json
init-config/{{cookiecutter.project_slug}}/: .env  pyproject.toml
tools/: strip_notebook_outputs.py
utilities/: snowflake_utility_functions.py
